приводим пагинацию в порядок
